// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details matches the last snapshot with details 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
>
  interesting info
</Text>
`;

exports[`Details matches the last snapshot without details 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
/>
`;
